[project]
name = "FlashLogAPP"
version = "0.2.0"
description = "Aplicativo criado pelo oitavo grupo do senai do SESI-237 sendo a equipe estituida por Guilherme Maurinho,Maria Vitória, Ana Carolina e João Hélio"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "JH", email = "jhmsg45@gmail.com" },
    { name = "GuiihMaurinho", email = "guilhermemaurinhoborgesalves@gmail.com" },
    { name = "MariaRiguetti", email = "mariavitoriariguetti358@gmail.com" },
    { name = "AnaaCarolr", email = "you@gmail.com" }
]
dependencies = [
    "flet>=0.85.1"
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.1",
    "flet-desktop>=0.85.1",
    "flet-web>=0.85.1",
]

[tool.flet]
org = "Sesi-237 Senai"
product = "app"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
